fix: fix button width and overflow in sliderAnim

--- a/src/components/widgets/SliderAnimation/styles.module.scss
+++ b/src/components/widgets/SliderAnimation/styles.module.scss
@@ -346,6 +346,10 @@
     padding: 30px 0;
     width: 100%;
 
+    &>button {
+      width: 90%;
+    }
+
     &__title {
       font-size: 24px;
       line-height: 33px;
@@ -434,7 +438,17 @@
     &_rightestDog {
       z-index: 6;
       top: 20%;
-      right: -2%;
+      right: 0%;
+    }
+  }
+}
+
+@media (max-width: 350px) {
+
+  .sliderAnimation {
+
+    &__img_container {
+      width: 288px;
     }
   }
 }
